// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-array-text-field Renders \`c-array-text-field\` with all field types correctly 1`] = `
<div>
  <div
    class="layout align-center"
  >
    <div
      class="flex"
    >
      <div
        class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <label
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Value
              </label>
              <input
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <c-action-btn-stub
      type="delete"
    />
  </div>
  <div
    class="layout align-center"
  >
    <div
      class="flex"
    >
      <div
        class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <label
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Value
              </label>
              <input
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <c-action-btn-stub
      type="delete"
    />
  </div>
  <div
    class="layout align-center"
  >
    <div
      class="flex"
    >
      <div
        class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <label
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Value
              </label>
              <input
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <c-action-btn-stub
      type="delete"
    />
  </div>
  <div
    class="layout align-center"
  >
    <div
      class="flex"
    >
      <div
        class="v-input theme--light v-text-field"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <label
                class="v-label theme--light"
                style="left: 0px; position: absolute;"
              >
                Value
              </label>
              <input
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <c-action-btn-stub
      type="delete"
    />
  </div>
  <div
    class="v-messages theme--light error--text"
  >
    <transition-group-stub
      class="v-messages__wrapper"
      name="message-transition"
      tag="div"
    />
  </div>
  <button
    class="v-btn-legacy-m--y v-btn v-btn--outlined theme--light v-size--default primary--text"
    type="button"
  >
    <span
      class="v-btn__content"
    >
    Add
    </span>
  </button>
</div>
`;

exports[`c-array-text-field Renders \`c-array-text-field\` with default props correctly 1`] = `
<div>
  <div
    class="v-messages theme--light error--text"
  >
    <transition-group-stub
      class="v-messages__wrapper"
      name="message-transition"
      tag="div"
    />
  </div>
  <button
    class="v-btn-legacy-m--y v-btn v-btn--outlined theme--light v-size--default primary--text"
    type="button"
  >
    <span
      class="v-btn__content"
    >
    Add
    </span>
  </button>
</div>
`;

exports[`c-array-text-field Renders disabled \`c-array-text-field\` correctly 1`] = `
<div>
  <div
    class="layout align-center"
  >
    <div
      class="flex"
    >
      <div
        class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <label
                class="v-label v-label--active v-label--is-disabled theme--light"
                style="left: 0px; position: absolute;"
              >
                Value
              </label>
              <input
                disabled="disabled"
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <!---->
  </div>
  <div
    class="layout align-center"
  >
    <div
      class="flex"
    >
      <div
        class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-text-field__slot"
            >
              <label
                class="v-label v-label--active v-label--is-disabled theme--light"
                style="left: 0px; position: absolute;"
              >
                Value
              </label>
              <input
                disabled="disabled"
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <transition-group-stub
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <!---->
  </div>
  <div
    class="v-messages theme--light error--text"
  >
    <transition-group-stub
      class="v-messages__wrapper"
      name="message-transition"
      tag="div"
    />
  </div>
  <button
    class="v-btn-legacy-m--y v-btn v-btn--disabled v-btn--outlined theme--light v-size--default"
    disabled="disabled"
    type="button"
  >
    <span
      class="v-btn__content"
    >
    Add
    </span>
  </button>
</div>
`;
